{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "3139eb8e-743e-4128-8f2f-f8cbbcf6274d",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "169a933d-a422-4d47-b9a1-5717187a97ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "35bebae6-d81b-41ea-809f-11a791aa04b5",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "c1aeb205-f9d7-479b-b7eb-4be99a6455a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8dde5882-7aee-4fce-b795-01813734bee8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4b70d537-da98-44f1-8ca1-187e94490146",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "786997fd-c370-4d75-b06f-384a21103a7e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4baa498c-fa4d-4b02-bdc9-8a93fd9fc4f5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d99668e7-6856-42e0-a251-a7d201f3ffab",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b6c7c655-ab44-4864-aa36-d2da1c8a09d0",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08058c24-4328-4a31-89ad-362c0eeca61a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UseItem",
            "id": "0ee132b6-528d-43fa-ba70-ec4b6615523e",
            "actions": [
                {
                    "name": "RMB",
                    "type": "Button",
                    "id": "1c080b7c-71d5-4e1b-91b1-caa01c6e003a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LMB",
                    "type": "Button",
                    "id": "b2b920d5-2478-4037-9114-d89a25176191",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb39ff87-5ed4-47d2-b194-49bd5e59c3f3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "766c5cbe-6e59-4604-93e0-dc8db9ad8c0b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "ae37410d-cd98-4d40-8379-1b4eab2c1791",
            "actions": [
                {
                    "name": "StorageUI",
                    "type": "Button",
                    "id": "10f9bccb-3e94-45ab-b975-38a00db3e7e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenShop",
                    "type": "Button",
                    "id": "977c5026-64c8-475d-a70a-a65bf58df954",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HandleInventory",
                    "type": "Button",
                    "id": "fc9b7e34-ef8c-4b82-88c4-2b7601e581f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChestInteract",
                    "type": "Button",
                    "id": "dbadb89f-4d5a-4531-83cf-6814f2c5e4e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66ff4507-d9f7-441b-9e9a-ae64dc996876",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StorageUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bac5bff8-f8fc-4419-acae-1028dba2f86e",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38e613e9-da78-4366-90bf-a58e6fbefac5",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72951734-6265-42b2-a7aa-0f9c9c2e3dcb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChestInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}